--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     container_name: flux-lora-api
     restart: always
     volumes:
-      - ${TRAINING_DIR}:/app/outputs
+      - ${OUTPUTS_DIR}:/app/sd-scripts/outputs
+      - ${MODELS_DIR}:/app/sd-scripts/models
     network_mode: "host"
     runtime: nvidia
     environment:
