--- a/cloud-config.yaml
+++ b/cloud-config.yaml
@@ -32,7 +32,7 @@ write_files:
       User=root
       Type=oneshot
       RemainAfterExit=true
-      ExecStart=/usr/bin/docker run --rm --privileged --name=flux-train --network host -e FS_SHARE='10.167.80.130:/share1' -e CLOUD_STORAGE_TYPE='GCS' --volume /var/lib/nvidia/lib64:/usr/local/nvidia/lib64 --volume /var/lib/nvidia/bin:/usr/local/nvidia/bin --device /dev/nvidia0:/dev/nvidia0 --device /dev/nvidia-uvm:/dev/nvidia-uvm --device /dev/nvidiactl:/dev/nvidiactl quinninc/flux-train:1.2.0
+      ExecStart=/usr/bin/docker run --rm --privileged --name=flux-train --network host -e FS_SHARE='10.167.80.130:/share1' -e CLOUD_TYPE='GCP' --volume /var/lib/nvidia/lib64:/usr/local/nvidia/lib64 --volume /var/lib/nvidia/bin:/usr/local/nvidia/bin --device /dev/nvidia0:/dev/nvidia0 --device /dev/nvidia-uvm:/dev/nvidia-uvm --device /dev/nvidiactl:/dev/nvidiactl quinninc/flux-train:1.2.0
       StandardOutput=journal+console
       StandardError=journal+console
 
